Add SonarCloud and Trivy security scanning
- Add SonarCloud code quality analysis for React frontend
- Add Trivy container vulnerability scanning for frontend images
- Upload Trivy results to GitHub Security tab (SARIF format)
- Add sonar-project.properties configuration file
- All scans non-blocking (continue-on-error: true)

Scanning runs automatically on every build:
- SonarCloud: Code quality, bugs, security hotspots
- Trivy: HIGH and CRITICAL nginx/node vulnerabilities

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,18 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
+    - name: SonarCloud Scan
+      uses: SonarSource/sonarcloud-github-action@master
+      continue-on-error: true
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      with:
+        args: >
+          -Dsonar.projectKey=capstone-frontend
+          -Dsonar.sources=src
+          -Dsonar.exclusions=node_modules/**,build/**
+
     - name: Azure Login
       uses: azure/login@v1
       with:
@@ -24,6 +36,7 @@ jobs:
       run: |
         SHORT_SHA=$(echo ${{ github.sha }} | cut -c1-7)
         echo "IMAGE_TAG=dev-${SHORT_SHA}" >> $GITHUB_ENV
+        echo "ACR_LOGIN_SERVER=gopaldevacr.azurecr.io" >> $GITHUB_ENV
 
     - name: Build and push to Dev ACR
       run: |
@@ -34,6 +47,30 @@ jobs:
           --build-arg NGINX_CONF=nginx.dev.conf \
           --file Dockerfile \
           .
+
+    - name: Run Trivy vulnerability scanner
+      uses: aquasecurity/trivy-action@master
+      continue-on-error: true
+      with:
+        image-ref: ${{ env.ACR_LOGIN_SERVER }}/frontend:${{ env.IMAGE_TAG }}
+        format: 'sarif'
+        output: 'trivy-frontend.sarif'
+        severity: 'HIGH,CRITICAL'
+
+    - name: Upload Trivy scan results to GitHub Security
+      uses: github/codeql-action/upload-sarif@v3
+      continue-on-error: true
+      with:
+        sarif_file: 'trivy-frontend.sarif'
+        category: 'trivy-frontend'
+
+    - name: Upload Trivy reports
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: trivy-frontend-report
+        path: 'trivy-frontend.sarif'
+        retention-days: 30
 
   deploy-dev:
     needs: build
